--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern_shopping_list",
+  "name": "msg-gories",
   "version": "1.0.0",
-  "description": "Shopping List built with the MERN Stack",
+  "description": "A fun way to play Scateggoires on your phone!",
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
