--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "concurrently": "^4.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "googleapis": "^27.0.0",
     "mongoose": "^5.2.14",
-    "pretty-ms": "^4.0.0"
+    "pretty-ms": "^4.0.0",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
