--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.3",
-    "fs": "0.0.1-security",
     "googleapis": "^27.0.0",
     "mongoose": "^5.2.14",
     "pretty-ms": "^4.0.0",
     "readline": "^1.3.0"
+  },
+  "engines": {
+    "node": ">=6.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
