--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^4.1.0",
     "express": "^4.16.3",
     "googleapis": "^27.0.0",
+    "js-base64": "^2.4.9",
     "mongoose": "^5.2.14",
     "pretty-ms": "^4.0.0",
     "readline": "^1.3.0"
