--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "msg-gories",
     "version": "1.0.0",
-    "description": "A fun way to play Scateggoires on your phone!",
+    "description": "A fun way to play Scattergories on your phone!",
     "main": "server.js",
     "scripts": {
         "client-install": "npm install --prefix client",
@@ -19,7 +19,8 @@
         "express": "^4.16.3",
         "googleapis": "^27.0.0",
         "js-base64": "^2.4.9",
-        "mongoose": "^5.2.14",
+        "mongoose": "^5.3.15",
+        "node-uuid": "^1.4.8",
         "pretty-ms": "^4.0.0",
         "readline": "^1.3.0",
         "uuid": "^3.3.2"
@@ -28,6 +29,6 @@
         "node": ">=6.4.0"
     },
     "devDependencies": {
-        "nodemon": "^1.18.6"
+        "nodemon": "^1.18.7"
     }
 }
