--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "body-parser": "^1.18.3",
         "concurrently": "^4.1.0",
         "express": "^4.16.3",
+        "gmail-api-parse-message": "^2.1.0",
         "googleapis": "^27.0.0",
         "js-base64": "^2.4.9",
         "mongoose": "^5.3.15",
