--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.5",
-    "react-transition-group": "^2.4.0",
+    "react-scripts": "^2.1.1",
+    "react-transition-group": "^2.5.1",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
@@ -24,5 +24,11 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "@types/reactstrap": "^6.4.3"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
